# foreca-weather-forecast

./: LICENSE  Pipfile  README.md  setup.cfg  setup.py
src/foreca/weather/forecast/cli/: __main__.py  config.json  foreca.py
