[metadata]
name = foreca.weather.forecast.cli
version = 1.0.0
description = Python command line interface for Foreca forecast
long_description = file: README.md
long_description_content_type = text/markdown
keywords = foreca weather forecast cli
author = Eva Valachova
author-email = valachovae@email.cz
url = https://github.com/evicekcz/foreca-weather-forecast.git
license = MIT
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5

[options]
python_requires = >= 3.5
zip_safe = False
package_dir=
    =src

packages = foreca.weather.forecast.cli

install_requires =
  requests >= 2.2, < 3.0
  click >= 7.0, < 8.0
  demjson >= 2.2, < 3.0

[options.package_data]
* = *.json


[tool:pylint]
addopts = --rcfile=setup.cfg
